# tamagotchi

./: .gitignore  CLAUDE.md  DETERMINISM_INVESTIGATION.md  FACTS.md  FOOD_MENU_ANALYSIS.md  GAME_RULES.md  GEMINI.md  INVESTIGATION_PLAN.md  INVESTIGATION_SICKNESS.md  README.md  REVERSE_ENGINEERING_GUIDE.md  TODO.md  analyzer.py  info.txt  investigator.py  memory_config.py  platformio.ini
.agents/: AGENTS.md
.claude/: settings.local.json
disassembly/: disassemble_rom.py  extract_isa.py  rom_disassembly.asm
disassembly/investigation/: analyze_calls.py  binary_search_change.py  check_51.py  check_addr.py  check_all_memory.py  check_sleep_logic.py  decode_rom.py  decode_stack.py  dump_memory_range.py  find_access.py  find_access_42.py  find_access_51.py  find_events.py  find_events_51.py  find_happy.py  find_increments.py  find_logic.py  find_mistake_logic.py  find_neglect.py  find_opcode.py  find_ops.py  find_refs.py  find_writes.py  inspect_save.py  inspect_segments.py  inspect_stream.py  inspect_tick.py  monitor_51.py  scan_51.py  scan_addr.py  scan_all.py  trace_sleep.py
pc/: Arduino.h  CMakeLists.txt  README.md  arduino_compat.h  input.h  main.cpp  networking.h  pc_input.cpp  pc_networking.cpp  pc_savestate.cpp  pc_savestate.h  pgmspace.h  windows_mock.h
pc/avr/: pgmspace.h
src/: babysitter.cpp  babysitter.h  cpu.c  cpu.h  hardcoded_state.h  input.cpp  input.h  main.cpp  memory.cpp  memory.h  miniz_export.h  networking.cpp  networking.h  stream_capture.cpp  stream_capture.h  tamalib.c  tamalib.h  wifi_config.h.sample
tools/: annotation_store.py  bookmark_store.py  headless_runner.py  stream_export.py  stream_reader.py  stream_validate.py  stream_viewer.py  test_helpers.py  test_viewer.py
